waapi comments, ff nightly

--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -60,8 +60,8 @@
 					Le moteur CSS envoûté par la magie d'Houdini
 					Pour du dessin et animations nouvelle génération... et plus encore
 
-					Le meetup AFUP est notre hôte à titre exceptionnel pour ce 1er talk 
-					entièrement dédié au frontend Web/CSS, avec un peu de JS
+					Le meetup AFUP est notre hôte à titre exceptionnel pour ce talk 
+					entièrement dédié frontend Web/CSS, avec un peu de JS
 
 					Houdini, issu de travaux de Google/Apple/Mozilla, pousse les portes du moteur CSS et les ouvre encore davantage aux développeurs.ses frontend mais également
 					aux créas/UI, avec à la clef un jeu étendu de possibilités de dessin, d'animation, de propriétés, 
@@ -198,7 +198,7 @@
 				<p>Firefox (Servo) franchement derrière, IE va utiliser Blink</p>
 				<p >La Team IE Edge va verser le meilleur de Edge dans Blink (Reddit aMa 06/19), réouvrir <a href="https://www.reddit.com/r/IAmA/comments/c094uf/hi_reddit_were_the_team_behind_microsoft_edge_and/">des API bloquées contre adblockers</a></p>
 				<p class="fragment fade-up">"We're still evaluating some of the latest changes here in Chromium(...). To be clear, we will not artificially restrict ad blocking for business reasons related to advertising."</p>
-				<p class="fragment fade-up">Important : WAAPI à 100% dans Safari TP / iOS13 (sans Worklet, uc), à 80% CR FF (playback .pause(),.reverse() pas fini)</p>
+				<p class="fragment fade-up">Important : WAAPI à 100% dans <a href="https://caniuse.com/#search=web%20anima">Safari / iOS13</a> et <a href="https://birtles.github.io/areweanimatedyet/">FF Nightly</a>, à 80% CR (playback .pause(),.reverse() pas fini)</p>
 			</section>
 
 			<section>
